# rust_embedded_examples

./: .gitignore  Readme.md
nucleo_stm32f446re/blinking_ld2/: Cargo.toml  Embed.toml
nucleo_stm32f446re/blinking_ld2/src/: main.rs
nucleo_stm32f446re/usart2/.cargo/: config.toml
nucleo_stm32f446re/usart2/src/: main.rs
